# ai_driven_dev

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  SECURITY.md  SUPPORT.md  aidd_audit_report.md  aidd_improvement_plan.md  aidd_test_flow_prompt_ralph_script.txt  aidd_test_flow_prompt_ralph_script_full.txt  backlog.md  claude-workflow-extensions.patch  init-claude-workflow.sh  pyproject.toml  workflow.md
.claude/: settings.json
.claude-plugin/: dist-manifest.json  marketplace.json  official-submission.json  plugin.json
.dev/: .gitignore
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md
agents/: analyst.md  implementer.md  plan-reviewer.md  planner.md  prd-reviewer.md  qa.md  researcher.md  reviewer.md  spec-interview-writer.md  tasklist-refiner.md  validator.md
aidd_runtime/: __init__.py  _bootstrap.py  actions_apply.py  actions_validate.py  analyst_check.py  analyst_guard.py  artifact_truth.py  claude_stream_render.py  cli.py  context_expand.py  context_map_validate.py  dag_export.py  diff_boundary_check.py  doctor.py  entrypoint.py  feature_ids.py  gates.py  id_utils.py  identifiers.py  implement_run.py  index_sync.py  init.py  launcher.py  loop_block_policy.py  loop_pack.py  loop_run.py  loop_step.py  loop_step_policy.py  loop_step_stage_chain.py  marker_semantics.py  md_patch.py  md_slice.py  output_contract.py  plan_review_gate.py  plugin_bootstrap.py  prd_check.py  prd_review.py  prd_review_gate.py  prd_review_section.py  preflight_prepare.py  (+38 more)
claude-presets/: feature-impl.yaml  feature-plan.yaml  feature-prd.yaml  feature-release.yaml
commands/: aidd-init.md  idea-new.md  implement.md  plan-new.md  qa.md  researcher.md  review-spec.md  review.md  spec-interview.md  status.md  tasks-new.md
config/: conventions.json  gates.json
doc/: backlog.md
docs/: agent-skill-best-practices.md  agents-playbook.md  backlog.md  prd.template.md  (+17 more)
(+1368 files in other folders)
