[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidd-runtime"
version = "0.1.0"
description = "Runtime helpers for the AI-driven development workflow plugin."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "AI-Driven Dev Maintainers" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
call-graph = [
  "tree-sitter>=0.23.0",
  "tree-sitter-language-pack>=0.3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aidd_runtime*"]
